    - Changed processing unit board molding to take ferric chloride and indium.
    - Added another 3 tiers of mining productivity, but nerfed tiers 1-4 to only give +5% productivity.
    - Moved power armour MK2 into Metalloids science pack.
    - Nerfed solid fuel to make it less useful for vehicles.
    - Changed Geneva's neglection magazine to take 2 seconds to craft instead of 4.

  Fixes:
    - Fixed some wood-related recipes not being in the same place.
    - Fixed sulfur not being in the correct place.
    - Made some attempts to curb the file size, but idk chief im gonna have to split these into graphic mods soon
    - Changed solar panel equipment 2 into solar panel equipment MK2.
    - Fixed some leeching icons having wrong stuff in it in my crusade to make this mod smaller.
    - Fixed some locale issues.
    - (#3) Fixed processing integrated circuit molding giving advanced integrated circuits.
    - Fixed a lot of minor locale issues, like capatalisation and random bs like that.
    - Fixed the burn-inator being unlocked twice.
    - Fixed the stainless steel tank not actually taking.. stainless steel.
    - Fixed mining productivity and research speed not being unlocked by their respective tech trees.

---------------------------------------------------------------------------------------------------
Version: 0.5.129
Date: 2024-08-16
  The dont code when your tired, heed my warning Update:

  Fixes:
    - Fixed an error with K2 after deleting alternative recipe packs.

---------------------------------------------------------------------------------------------------
Version: 0.5.127
Date: 2024-08-15
  The you will join the discord server, you will join the discord server, you w- Update:

  Additions:
    - Added the discord server link to the in-game mod page.

---------------------------------------------------------------------------------------------------
Version: 0.5.126
Date: 2024-08-15
  The old me was so smrt- i mean smart Update:

  Fixes: