@@ -1,0 +1,9 @@
+Badge_list = {}
+
+Badge_list["ammo"] = 
+{
+    ["pm-high-density-magazine"] = {ib_let_badge = "HDR"},
+    ["pm-geneva's-neglection-magazine"] = {ib_let_badge = "GNR"},
+    ["pm-high-density-shotgun-shell"] = {ib_let_badge = "HDS"},
+    ["pm-geneva's-neglection-shotgun-shell"] = {ib_let_badge = "GNS"},
+}
